--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,9 +1,24 @@
-<div>
-    <h1>My Goals</h1>
+<div class="container">
+    <h1>Quotes</h1>
     <hr>
-    <ul>
-      <li *ngFor='let goal of goals'>
-        {{goal.name}}
-      </li>
-    </ul>
+  
+    <div class="row">
+      <div class="col-md-6">
+        <div *ngFor='let quote of quotes;let i = index'>
+          <br>
+          <div>
+            <h6 id={{i}} appHighlight>{{quote.name}} due on {{quote.completeDate|date|uppercase}}</h6>
+            <button (click)='seeDetails(i)' class="btn btn-primary">Toggle Details</button>
+          </div>
+  
+          <div *ngIf='quote.showDescription'>
+            <app-quote-detail  [quote]='quote' (isComplete) = 'deletequote($event,i)'></app-quote-detail>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <app-quotes-form (addquote)="addNewquote($event)"></app-quotes-form>
+      </div>
+    </div>
+    <p *ngIf='quotes.length > 5'>You have too many quotes</p>
   </div>
