--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,3 @@
 <p>{{quote.description}}</p>
-<p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
+<p>posted on {{quote.completeDate|date}} by {{quote.person}}</p>
 <button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete quote</button>
