--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -4,15 +4,15 @@
     <form #quoteForm='ngForm'(ngSubmit)='submitquote()'>
         <div class="form-group">
   
-            <label for="name">Name</label>
+            <label for="name">Enter Author here</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newquote.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Name is required</p>
+              <p>Author name is required</p>
             </div>
         </div>
         <div class="form-group">
   
-            <label for="description">Description</label>
+            <label for="description">Enter Quote here</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newquote.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
               <p>Description is required</p>
