--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,4 @@
+<br>
 <p>{{quote.description}}</p>
 <p>posted on {{quote.completeDate|date}} by {{quote.person}}</p>
-<button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete quote</button>
+<button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete</button>
