--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -2,30 +2,29 @@
     <h2 class="text-center">Create a new quote</h2>
     <hr>
     <form #quoteForm='ngForm'(ngSubmit)='submitquote()'>
+      <br>
         <div class="form-group">
-  
-            <label for="name">Enter Author here</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="newquote.name" name="name" #name='ngModel' required>
-            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+            <label for="description">Author Name</label>
+            <input type="text" class="form-control" id="description" [(ngModel)]="newquote.description" name="description" #description='ngModel' required>
+            <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
               <p>Author name is required</p>
             </div>
         </div>
+        <br>
+        <div class="form-group">
+          <label for="person">Enter Name</label>
+          <input type="text" class="form-control" id="person" [(ngModel)]="newquote.person" name="person" #name='ngModel' required>
+      </div>
+      <br>
         <div class="form-group">
   
-            <label for="description">Enter Quote here</label>
-            <textarea class="form-control" id="description" rows="4" [(ngModel)]="newquote.description" name="description" #description="ngModel" required></textarea>
-            <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-              <p>Description is required</p>
+            <label for="name">Enter Quote</label>
+            <textarea class="form-control" id="name" rows="4" [(ngModel)]="newquote.name" name="name" #name="ngModel" required></textarea>
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+              <p>Quote must be filled</p>
             </div>
         </div>
-        <div class="form-group">
-  
-            <label for="complete">Completion</label>
-            <input type='date' id="complete" [(ngModel)]="newquote.completeDate" name="completeDate" #completeDate="ngModel" required>
-            <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
-              <p>Date is required</p>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-success">Add quote</button>
+        <br>
+        <button type="submit" class="btn btn-success">Post Quote</button>
     </form>
   </div>
