--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -25,6 +25,6 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-success">Post Quote</button>
+        <button type="submit" class="btn btn-sm btn-success">Post Quote</button>
     </form>
   </div>
