--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,4 @@
 <br>
 <p>{{quote.description}}</p>
-<p>posted on {{quote.completeDate|date}} by {{quote.person}}</p>
+<p>posted on {{quote.completeDate|date}} by {{quote.person}}, making it {{quote.completeDate|dateCount}} days old</p>
 <button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete</button>
