add form reset function

--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <h2 class="text-center">Create a new quote</h2>
     <hr>
-    <form #quoteForm='ngForm'(ngSubmit)='submitquote()'>
+    <form name="myForm" #quoteForm='ngForm'(ngSubmit)='submitquote()'>
       <br>
         <div class="form-group">
             <label for="description">Author Name</label>
