--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,5 @@
 <br>
-<p>{{quote.description}}</p>
+<p>{{quote.description}}</p><button class="btn btn-success" (click)='upvote()'>{{quoteUp.likes}} <i class="fa fa-thumbs-up" id="like"></i></button> 
+<button class="btn" id="hate" (click)='downvote()'>{{quoteDown.dislikes}} <i class="fa fa-thumbs-down" id="dislike"></i></button> 
 <p>posted on {{quote.completeDate|date}} by {{quote.person}}, making it {{quote.completeDate|dateCount}} days old</p>
 <button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete</button>
