--- a/src/styles.css
+++ b/src/styles.css
@@ -2,25 +2,52 @@
  @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,200;0,300;0,500;0,600;1,600;1,700&display=swap');
 
  * {
-     margin: 0;
-     padding: 0;
-     font-family: 'Exo 2', sans-serif;
-     box-sizing: border-box;
-     text-decoration: none;
-     border: none;
-     transition: all .3s linear;
+   margin: 0;
+   padding: 0;
+   font-family: 'Exo 2', sans-serif;
+   box-sizing: border-box;
+   text-decoration: none;
+   border: none;
+   transition: all .3s linear;
  }
- 
+
  html {
-     overflow-x: hidden;
+   overflow-x: hidden;
  }
- 
+
  body {
-     background: black;
-     color: white;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     min-height: 100vh;
-     flex-direction: column;
+   background: linear-gradient(135deg, rgba(255, 255, 255, 0.911), rgba(255, 255, 255, 0.705)), url("qqwww.jpg");
+   color: black;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-height: 100vh;
+   flex-direction: column;
+ }
+
+ .cardx {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   box-shadow: 0px 1px 4px white;
+   border-radius: 4px;
+   row-gap: 2%;
+
+ }
+
+ .container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .row {
+   display: flex;
+   justify-content: space-around;
+   text-align: center;
+ }
+
+ .part {
+   text-align: left;
  }
