--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,12 @@
  }
 
  body {
-   background: linear-gradient(135deg, rgba(255, 255, 255, 0.911), rgba(255, 255, 255, 0.705)), url("qqwww.jpg");
+   background: linear-gradient(135deg, rgba(255, 255, 255, 0.711), rgba(255, 255, 255, 0.605)), url("qqwww.jpg");
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
-   min-height: 100vh;
+    background-size: cover;
    flex-direction: column;
  }
 
@@ -30,7 +30,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   box-shadow: 0px 1px 4px white;
+   box-shadow: 0px 0px 5px black;
    border-radius: 4px;
    row-gap: 2%;
 
