add likes and dislikes counter

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -3,7 +3,9 @@
     <hr>
   
     <div class="row">
+     
       <div class="col-md-5 cardx ">
+        <h1>Posted Quotes</h1>
         <div *ngFor='let quote of quotes;let i = index'>
           <br>
           <div>
