--- a/src/styles.css
+++ b/src/styles.css
@@ -32,8 +32,7 @@
    justify-content: center;
    box-shadow: 0px 0px 5px black;
    border-radius: 4px;
-   row-gap: 2%;
-
+   padding: 2%;
  }
 
  .container {
@@ -51,3 +50,10 @@
  .part {
    text-align: left;
  }
+ .btn-check {
+    font-size: 1.7rem;
+    background-color: red;
+    letter-spacing: .5rem;
+    font-weight: 900;
+    margin-bottom: 1rem;
+}
