add font awesome icons

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -5,4 +5,4 @@
 <button class="btn btn-sm btn-danger" id="notLike" (click)='downvote()'>{{quote.dislikes}} <i class="fa fa-thumbs-down" id="dislike"></i> </button> 
 <br>
 <br>
-<button (click)= 'quoteDelete(true)' class="btn btn-outline-danger">Delete</button>
+<button (click)= 'quoteDelete(true)' class="btn btn-outline-danger"><i class="fa fa-trash"></i></button>
